--- a/Css/custom.css
+++ b/Css/custom.css
@@ -11,11 +11,6 @@
 body{
   background-color: #0c0f16;
 }
-.text-test{
-  color: #f6f6fe;
-  margin-bottom:20px ;
-  font-family:'Ubuntu','sans-serif';
-}
 .max-width{
   max-width: 1300px;
   padding: 0 10px;
@@ -101,6 +96,15 @@ body{
     max-width: 930px;
   }
 
+}
+
+section{
+  padding: 50px 0;
+}
+@media(max-width:690px){
+  section{
+    padding: 20px 0;
+  }
 }
 
 .top{
@@ -212,5 +216,83 @@ background: #fff;
 @media(max-width:690px){
   .services .serv-content .card{
     width: 100%;
+  }
+}
+
+.premium{
+  color: #fff;
+  background-color: #151921;
+  font-family:'Poppins' sans-serif;
+}
+.premium .title {
+  text-align: center;
+  margin-bottom: 40px;
+  font-weight: 400;
+  font-size: 35px;
+}
+.premium .premium-content{
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+}
+.premium .premium-content .left{
+  width: 45%;
+}
+
+.premium .premium-content .left img{
+  width: 400px;
+  height: 400px;
+  object-fit: cover;
+  border-radius: 6px;
+}
+
+.premium .premium-content .right{
+  width: 55%;
+}
+
+.premium .premium-content .right .text{
+  font-size: 25px;
+  font-weight: 400;
+  margin-bottom: 10px;
+}
+
+.premium .premium-content .right p{
+  text-align: justify;
+}
+.premium .premium-content .right a{
+  display: inline-block;
+  background: #b02ab7;
+  color: #fff;
+  font-size: 20px;
+  font-weight:500;
+  padding: 10px 30px;
+  margin-top: 20px;
+  border-radius: 6px;
+  border: 2px solid #b02ab7;
+  transition: all 0.3s ease;
+}
+
+.premium .premium-content .right a:hover{
+  color: #b02ab7;
+  background: none;
+}
+@media(max-width:1104px){
+  .premium .premium-content .left img{
+    width: 350px;
+    height: 350px;
+  }
+}
+@media(max-width:947px){
+  .premium .premium-content .column{
+    width: 100%;
+  }
+  .premium .premium-content .left{
+    display: flex;
+    justify-content: center;
+    margin: 0 auto 60px;
+  }
+  .premium .premium-content .right{
+    flex: 100%;
   }
 }
