--- a/Css/custom.css
+++ b/Css/custom.css
@@ -296,3 +296,19 @@ background: #fff;
     flex: 100%;
   }
 }
+
+footer{
+  background: #0c0f16;
+  padding: 25px 23px;
+  color: #fff;
+  text-align: center;
+  font-family: 'Poppins',sans-serif;
+}
+
+footer span a{
+  color: #547ec7;
+}
+
+footer span a:hover{
+  color: #fff;
+}
